--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,23 @@
 .App {
   text-align: center;
 }
+
+.login-reg-btn {
+  padding: 20px 30px;
+  background-color: rgb(246, 235, 128);
+  border: 4px solid rgb(49, 209, 174);
+  border-radius: 10px;
+  font-weight: bold;
+  color: rgb(50, 48, 48);
+  font-size: larger;
+}
+
+.logout-btn {
+  padding: 20px 30px;
+  background-color: rgb(246, 235, 128);
+  border: 4px solid rgb(49, 209, 174);
+  border-radius: 10px;
+  font-weight: bold;
+  color: rgb(50, 48, 48);
+  font-size: larger;
+}
