--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,10 @@
   outline: 1px solid purple;
 }
 
+.outline-or {
+  outline: 2px solid orange;
+}
+
 .thick-border {
   border: 3px solid darkgray;
   border-radius: 10px;
