--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.error-message {
+  flex: 1;
+  color: tomato;
+  margin-left: 10px;
+}
+
 .dark-font {
   color: rgb(57,63,69);
 }
