--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.hidden-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
 .error-message {
   flex: 1;
   color: tomato;
