--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.div-glow {
+  display: inline-block;
+  background-color: #fff;
+  box-shadow: 0px 0px 40px 25px rgb(173, 250, 49);
+  /* in order: x offset, y offset, blur size, spread size, color */
+  /* blur size and spread size are optional (they default to 0) */
+}
+
 .hidden-checkbox input {
   position: absolute;
   opacity: 0;
