--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.helper-msg-color {
+  color: rgb(108, 165, 17);
+}
+
 .div-glow {
   display: inline-block;
   background-color: #fff;
